# kiro-mcp-agents

./: .gitignore  README.md  core.py  dashboard.sh  md_to_pdf.py  pyproject.toml  server.py
agents/: correspondence-writer.json  report-creator.json
tests/: test_investigation_pdf.py  test_pdf_integration.py
