[project]
name = "kiro-agents"
version = "0.2.0"
description = "General-purpose agent launcher MCP server for Kiro CLI"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.0.0"]

[project.scripts]
kiro-agents = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
